internal/ogc/features/cql/parser/cql_parser.go
// Code generated from CqlParser.g4 by ANTLR 4.13.1. DO NOT EDIT.

package parser // CqlParser
import (
	"fmt"
	"strconv"
	"sync"

	"github.com/antlr4-go/antlr/v4"
)

// Suppress unused import errors
var _ = fmt.Printf
var _ = strconv.Itoa
var _ = sync.Once{}

type CqlParser struct {
	*antlr.BaseParser
}

var CqlParserParserStaticData struct {
	once                   sync.Once
	serializedATN          []int32
	LiteralNames           []string
	SymbolicNames          []string
	RuleNames              []string
	PredictionContextCache *antlr.PredictionContextCache
	atn                    *antlr.ATN
	decisionToDFA          []*antlr.DFA
}

func cqlparserParserInit() {
	staticData := &CqlParserParserStaticData
	staticData.LiteralNames = []string{
		"", "", "'<'", "'='", "'>'", "", "", "", "", "", "", "", "", "", "",
		"", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "",
		"", "", "'$'", "'_'", "'\"'", "", "'('", "')'", "'['", "']'", "'*'",
		"'+'", "','", "'^'", "'-'", "'.'", "'/'", "':'", "'%'", "", "", "",
		"", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "",
		"", "", "", "", "", "", "", "", "", "", "", "", "''''",
	}
	staticData.SymbolicNames = []string{
		"", "ComparisonOperator", "LT", "EQ", "GT", "NEQ", "GTEQ", "LTEQ", "BooleanLiteral",
		"AND", "OR", "NOT", "LIKE", "BETWEEN", "IS", "NULL", "SpatialFunction",
		"TemporalFunction", "ArrayFunction", "IN", "POINT", "LINESTRING", "POLYGON",
		"MULTIPOINT", "MULTILINESTRING", "MULTIPOLYGON", "GEOMETRYCOLLECTION",
		"BBOX", "CASEI", "ACCENTI", "LOWER", "UPPER", "NumericLiteral", "DIGIT",
		"DOLLAR", "UNDERSCORE", "DOUBLEQUOTE", "QUOTE", "LEFTPAREN", "RIGHTPAREN",
		"LEFTSQUAREBRACKET", "RIGHTSQUAREBRACKET", "ASTERISK", "PLUS", "COMMA",
		"CARET", "MINUS", "PERIOD", "SOLIDUS", "COLON", "PERCENT", "DIV", "ALPHA",
		"IdentifierStart", "IdentifierPart", "UnsignedNumericLiteral", "SignedNumericLiteral",
		"ExactNumericLiteral", "ApproximateNumericLiteral", "Mantissa", "Exponent",
		"SignedInteger", "UnsignedInteger", "Sign", "DATE", "TIMESTAMP", "INTERVAL",
		"DateString", "TimestampString", "DotDotString", "Instant", "FullDate",
		"DateYear", "DateMonth", "DateDay", "UtcTime", "TimeHour", "TimeMinute",
		"TimeSecond", "Identifier", "IdentifierBare", "WS", "CharacterStringLiteral",
		"QuotedQuote",
	}
	staticData.RuleNames = []string{
		"cqlFilter", "booleanExpression", "booleanTerm", "booleanFactor", "booleanPrimary",
		"predicate", "comparisonPredicate", "binaryComparisonPredicate", "isLikePredicate",
		"isBetweenPredicate", "isInListPredicate", "isNullPredicate", "isNullOperand",
		"scalarExpression", "characterExpression", "patternExpression", "characterClause",
		"characterLiteral", "numericExpression", "numericLiteral", "booleanLiteral",
		"propertyName", "spatialPredicate", "geomExpression", "spatialInstance",
		"geometryLiteral", "point", "linestring", "linestringDef", "polygon",
		"polygonDef", "multiPoint", "multiPointDef", "multiLinestring", "multiPolygon",
		"geometryCollection", "bbox", "coordinate", "xCoord", "yCoord", "zCoord",
		"westBoundLon", "eastBoundLon", "northBoundLat", "southBoundLat", "minElev",
		"maxElev", "temporalPredicate", "temporalExpression", "temporalClause",
		"instantInstance", "interval", "intervalParameter", "arrayPredicate",
		"arrayExpression", "arrayClause", "arrayElement", "function", "argumentList",
		"positionalArgument", "argument",
	}
	staticData.PredictionContextCache = antlr.NewPredictionContextCache()
	deserializer := antlr.NewATNDeserializer(nil)
	staticData.atn = deserializer.Deserialize(staticData.serializedATN)
	atn := staticData.atn
	staticData.decisionToDFA = make([]*antlr.DFA, len(atn.DecisionToState))
	decisionToDFA := staticData.decisionToDFA
	for index, state := range atn.DecisionToState {
		decisionToDFA[index] = antlr.NewDFA(state, index)
	}
}

// CqlParserInit initializes any static state used to implement CqlParser. By default the
// static state used to implement the parser is lazily initialized during the first call to
// NewCqlParser(). You can call this function if you wish to initialize the static state ahead
// of time.
func CqlParserInit() {
	staticData := &CqlParserParserStaticData
	staticData.once.Do(cqlparserParserInit)
}

// NewCqlParser produces a new parser instance for the optional input antlr.TokenStream.
func NewCqlParser(input antlr.TokenStream) *CqlParser {
	CqlParserInit()
	this := new(CqlParser)
	this.BaseParser = antlr.NewBaseParser(input)
	staticData := &CqlParserParserStaticData
	this.Interpreter = antlr.NewParserATNSimulator(this, staticData.atn, staticData.decisionToDFA, staticData.PredictionContextCache)
	this.RuleNames = staticData.RuleNames
	this.LiteralNames = staticData.LiteralNames
	this.SymbolicNames = staticData.SymbolicNames
	this.GrammarFileName = "CqlParser.g4"

	return this
}

// CqlParser tokens.
const (
	CqlParserEOF                       = antlr.TokenEOF
	CqlParserComparisonOperator        = 1
	CqlParserLT                        = 2
	CqlParserEQ                        = 3
	CqlParserGT                        = 4
	CqlParserNEQ                       = 5
	CqlParserGTEQ                      = 6
	CqlParserLTEQ                      = 7
	CqlParserBooleanLiteral            = 8
	CqlParserAND                       = 9
	CqlParserOR                        = 10
	CqlParserNOT                       = 11
	CqlParserLIKE                      = 12
	CqlParserBETWEEN                   = 13
	CqlParserIS                        = 14
	CqlParserNULL                      = 15
	CqlParserSpatialFunction           = 16
	CqlParserTemporalFunction          = 17
	CqlParserArrayFunction             = 18
	CqlParserIN                        = 19
	CqlParserPOINT                     = 20
	CqlParserLINESTRING                = 21
	CqlParserPOLYGON                   = 22
	CqlParserMULTIPOINT                = 23
	CqlParserMULTILINESTRING           = 24
	CqlParserMULTIPOLYGON              = 25
	CqlParserGEOMETRYCOLLECTION        = 26
	CqlParserBBOX                      = 27
	CqlParserCASEI                     = 28
	CqlParserACCENTI                   = 29
	CqlParserLOWER                     = 30
	CqlParserUPPER                     = 31
	CqlParserNumericLiteral            = 32
	CqlParserDIGIT                     = 33
	CqlParserDOLLAR                    = 34
	CqlParserUNDERSCORE                = 35
	CqlParserDOUBLEQUOTE               = 36
	CqlParserQUOTE                     = 37
	CqlParserLEFTPAREN                 = 38
	CqlParserRIGHTPAREN                = 39
	CqlParserLEFTSQUAREBRACKET         = 40
	CqlParserRIGHTSQUAREBRACKET        = 41
	CqlParserASTERISK                  = 42
	CqlParserPLUS                      = 43
	CqlParserCOMMA                     = 44
	CqlParserCARET                     = 45
	CqlParserMINUS                     = 46
	CqlParserPERIOD                    = 47
	CqlParserSOLIDUS                   = 48
	CqlParserCOLON                     = 49
	CqlParserPERCENT                   = 50
	CqlParserDIV                       = 51
	CqlParserALPHA                     = 52
	CqlParserIdentifierStart           = 53
	CqlParserIdentifierPart            = 54
	CqlParserUnsignedNumericLiteral    = 55
	CqlParserSignedNumericLiteral      = 56
	CqlParserExactNumericLiteral       = 57
	CqlParserApproximateNumericLiteral = 58
	CqlParserMantissa                  = 59
	CqlParserExponent                  = 60
	CqlParserSignedInteger             = 61
	CqlParserUnsignedInteger           = 62
	CqlParserSign                      = 63
	CqlParserDATE                      = 64
	CqlParserTIMESTAMP                 = 65
	CqlParserINTERVAL                  = 66
	CqlParserDateString                = 67
	CqlParserTimestampString           = 68
	CqlParserDotDotString              = 69
	CqlParserInstant                   = 70
	CqlParserFullDate                  = 71
	CqlParserDateYear                  = 72
	CqlParserDateMonth                 = 73
	CqlParserDateDay                   = 74
	CqlParserUtcTime                   = 75
	CqlParserTimeHour                  = 76
	CqlParserTimeMinute                = 77
	CqlParserTimeSecond                = 78
	CqlParserIdentifier                = 79
	CqlParserIdentifierBare            = 80
	CqlParserWS                        = 81
	CqlParserCharacterStringLiteral    = 82
	CqlParserQuotedQuote               = 83
)

// CqlParser rules.
const (
	CqlParserRULE_cqlFilter                 = 0
	CqlParserRULE_booleanExpression         = 1
	CqlParserRULE_booleanTerm               = 2
	CqlParserRULE_booleanFactor             = 3
	CqlParserRULE_booleanPrimary            = 4
	CqlParserRULE_predicate                 = 5
	CqlParserRULE_comparisonPredicate       = 6
	CqlParserRULE_binaryComparisonPredicate = 7
	CqlParserRULE_isLikePredicate           = 8
	CqlParserRULE_isBetweenPredicate        = 9
	CqlParserRULE_isInListPredicate         = 10
	CqlParserRULE_isNullPredicate           = 11
	CqlParserRULE_isNullOperand             = 12
	CqlParserRULE_scalarExpression          = 13
	CqlParserRULE_characterExpression       = 14
	CqlParserRULE_patternExpression         = 15
	CqlParserRULE_characterClause           = 16
	CqlParserRULE_characterLiteral          = 17
	CqlParserRULE_numericExpression         = 18
	CqlParserRULE_numericLiteral            = 19
	CqlParserRULE_booleanLiteral            = 20
	CqlParserRULE_propertyName              = 21
	CqlParserRULE_spatialPredicate          = 22
	CqlParserRULE_geomExpression            = 23
	CqlParserRULE_spatialInstance           = 24
	CqlParserRULE_geometryLiteral           = 25
	CqlParserRULE_point                     = 26
	CqlParserRULE_linestring                = 27
	CqlParserRULE_linestringDef             = 28
	CqlParserRULE_polygon                   = 29
	CqlParserRULE_polygonDef                = 30
	CqlParserRULE_multiPoint                = 31
	CqlParserRULE_multiPointDef             = 32
	CqlParserRULE_multiLinestring           = 33
	CqlParserRULE_multiPolygon              = 34
	CqlParserRULE_geometryCollection        = 35
	CqlParserRULE_bbox                      = 36
	CqlParserRULE_coordinate                = 37
	CqlParserRULE_xCoord                    = 38
	CqlParserRULE_yCoord                    = 39
	CqlParserRULE_zCoord                    = 40
	CqlParserRULE_westBoundLon              = 41
	CqlParserRULE_eastBoundLon              = 42
	CqlParserRULE_northBoundLat             = 43
	CqlParserRULE_southBoundLat             = 44
	CqlParserRULE_minElev                   = 45
	CqlParserRULE_maxElev                   = 46
	CqlParserRULE_temporalPredicate         = 47
	CqlParserRULE_temporalExpression        = 48
	CqlParserRULE_temporalClause            = 49
	CqlParserRULE_instantInstance           = 50
	CqlParserRULE_interval                  = 51
	CqlParserRULE_intervalParameter         = 52
	CqlParserRULE_arrayPredicate            = 53
	CqlParserRULE_arrayExpression           = 54
	CqlParserRULE_arrayClause               = 55
	CqlParserRULE_arrayElement              = 56
	CqlParserRULE_function                  = 57
	CqlParserRULE_argumentList              = 58
	CqlParserRULE_positionalArgument        = 59
	CqlParserRULE_argument                  = 60
)

// ICqlFilterContext is an interface to support dynamic dispatch.
type ICqlFilterContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// Getter signatures
	BooleanExpression() IBooleanExpressionContext
	EOF() antlr.TerminalNode

	// IsCqlFilterContext differentiates from other interfaces.
	IsCqlFilterContext()
}

type CqlFilterContext struct {
	antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyCqlFilterContext() *CqlFilterContext {
	var p = new(CqlFilterContext)
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = CqlParserRULE_cqlFilter
	return p
}

func InitEmptyCqlFilterContext(p *CqlFilterContext) {
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = CqlParserRULE_cqlFilter
}

func (*CqlFilterContext) IsCqlFilterContext() {}

func NewCqlFilterContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *CqlFilterContext {
	var p = new(CqlFilterContext)

	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, parent, invokingState)

	p.parser = parser
	p.RuleIndex = CqlParserRULE_cqlFilter

	return p
}

func (s *CqlFilterContext) GetParser() antlr.Parser { return s.parser }

func (s *CqlFilterContext) BooleanExpression() IBooleanExpressionContext {
	var t antlr.RuleContext
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IBooleanExpressionContext); ok {
			t = ctx.(antlr.RuleContext)
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(IBooleanExpressionContext)
}

func (s *CqlFilterContext) EOF() antlr.TerminalNode {
	return s.GetToken(CqlParserEOF, 0)
}

func (s *CqlFilterContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *CqlFilterContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *CqlFilterContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(CqlParserListener); ok {
		listenerT.EnterCqlFilter(s)
	}
}

func (s *CqlFilterContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(CqlParserListener); ok {
		listenerT.ExitCqlFilter(s)
	}
}

func (p *CqlParser) CqlFilter() (localctx ICqlFilterContext) {
	localctx = NewCqlFilterContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 0, CqlParserRULE_cqlFilter)
	p.EnterOuterAlt(localctx, 1)
	{
		p.SetState(122)
		p.BooleanExpression()
	}
	{
		p.SetState(123)
		p.Match(CqlParserEOF)
		if p.HasError() {
			// Recognition error - abort rule
			goto errorExit
		}
	}

errorExit:
	if p.HasError() {
		v := p.GetError()
		localctx.SetException(v)
		p.GetErrorHandler().ReportError(p, v)
		p.GetErrorHandler().Recover(p, v)
		p.SetError(nil)
	}
	p.ExitRule()
	return localctx
	goto errorExit // Trick to prevent compiler error if the label is not used
}

// IBooleanExpressionContext is an interface to support dynamic dispatch.
type IBooleanExpressionContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// Getter signatures
	AllBooleanTerm() []IBooleanTermContext
	BooleanTerm(i int) IBooleanTermContext
	AllOR() []antlr.TerminalNode
	OR(i int) antlr.TerminalNode

	// IsBooleanExpressionContext differentiates from other interfaces.
	IsBooleanExpressionContext()
}

type BooleanExpressionContext struct {
	antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyBooleanExpressionContext() *BooleanExpressionContext {
	var p = new(BooleanExpressionContext)
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = CqlParserRULE_booleanExpression
	return p
}

func InitEmptyBooleanExpressionContext(p *BooleanExpressionContext) {
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = CqlParserRULE_booleanExpression
}

func (*BooleanExpressionContext) IsBooleanExpressionContext() {}

func NewBooleanExpressionContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *BooleanExpressionContext {
	var p = new(BooleanExpressionContext)

	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, parent, invokingState)

	p.parser = parser
	p.RuleIndex = CqlParserRULE_booleanExpression

	return p
}

func (s *BooleanExpressionContext) GetParser() antlr.Parser { return s.parser }

func (s *BooleanExpressionContext) AllBooleanTerm() []IBooleanTermContext {
	children := s.GetChildren()
	len := 0
	for _, ctx := range children {
		if _, ok := ctx.(IBooleanTermContext); ok {
			len++
		}
	}

	tst := make([]IBooleanTermContext, len)
	i := 0
	for _, ctx := range children {
		if t, ok := ctx.(IBooleanTermContext); ok {
			tst[i] = t.(IBooleanTermContext)
			i++
		}
	}

	return tst
}

func (s *BooleanExpressionContext) BooleanTerm(i int) IBooleanTermContext {
	var t antlr.RuleContext
	j := 0
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IBooleanTermContext); ok {
			if j == i {
				t = ctx.(antlr.RuleContext)
				break
			}
			j++
		}
	}

	if t == nil {
		return nil
	}

	return t.(IBooleanTermContext)
}

func (s *BooleanExpressionContext) AllOR() []antlr.TerminalNode {
	return s.GetTokens(CqlParserOR)
}

func (s *BooleanExpressionContext) OR(i int) antlr.TerminalNode {
	return s.GetToken(CqlParserOR, i)
}

func (s *BooleanExpressionContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *BooleanExpressionContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *BooleanExpressionContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(CqlParserListener); ok {
		listenerT.EnterBooleanExpression(s)
	}
}

func (s *BooleanExpressionContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(CqlParserListener); ok {
		listenerT.ExitBooleanExpression(s)
	}
}

func (p *CqlParser) BooleanExpression() (localctx IBooleanExpressionContext) {
	localctx = NewBooleanExpressionContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 2, CqlParserRULE_booleanExpression)
	var _la int

	p.EnterOuterAlt(localctx, 1)
	{
		p.SetState(125)
		p.BooleanTerm()
	}
	p.SetState(130)
	p.GetErrorHandler().Sync(p)
	if p.HasError() {
		goto errorExit
	}
	_la = p.GetTokenStream().LA(1)

	for _la == CqlParserOR {
		{
			p.SetState(126)
			p.Match(CqlParserOR)
			if p.HasError() {
				// Recognition error - abort rule
				goto errorExit
			}
		}
		{
			p.SetState(127)
			p.BooleanTerm()
		}

		p.SetState(132)
		p.GetErrorHandler().Sync(p)
		if p.HasError() {
			goto errorExit
		}
		_la = p.GetTokenStream().LA(1)
	}

errorExit:
	if p.HasError() {
		v := p.GetError()
		localctx.SetException(v)
		p.GetErrorHandler().ReportError(p, v)
		p.GetErrorHandler().Recover(p, v)
		p.SetError(nil)
	}
	p.ExitRule()
	return localctx
	goto errorExit // Trick to prevent compiler error if the label is not used
}

// IBooleanTermContext is an interface to support dynamic dispatch.
type IBooleanTermContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// Getter signatures
	AllBooleanFactor() []IBooleanFactorContext
	BooleanFactor(i int) IBooleanFactorContext
	AllAND() []antlr.TerminalNode
	AND(i int) antlr.TerminalNode

	// IsBooleanTermContext differentiates from other interfaces.
	IsBooleanTermContext()
}

type BooleanTermContext struct {
	antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyBooleanTermContext() *BooleanTermContext {
	var p = new(BooleanTermContext)
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = CqlParserRULE_booleanTerm
	return p
}

func InitEmptyBooleanTermContext(p *BooleanTermContext) {
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = CqlParserRULE_booleanTerm
}

func (*BooleanTermContext) IsBooleanTermContext() {}

func NewBooleanTermContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *BooleanTermContext {
	var p = new(BooleanTermContext)

	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, parent, invokingState)

	p.parser = parser
	p.RuleIndex = CqlParserRULE_booleanTerm

	return p
}

func (s *BooleanTermContext) GetParser() antlr.Parser { return s.parser }

func (s *BooleanTermContext) AllBooleanFactor() []IBooleanFactorContext {
	children := s.GetChildren()
	len := 0
	for _, ctx := range children {
		if _, ok := ctx.(IBooleanFactorContext); ok {
			len++
		}
	}

	tst := make([]IBooleanFactorContext, len)
	i := 0
	for _, ctx := range children {
		if t, ok := ctx.(IBooleanFactorContext); ok {
			tst[i] = t.(IBooleanFactorContext)
			i++
		}
	}

	return tst
}

func (s *BooleanTermContext) BooleanFactor(i int) IBooleanFactorContext {
	var t antlr.RuleContext
	j := 0
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IBooleanFactorContext); ok {
			if j == i {
				t = ctx.(antlr.RuleContext)
				break
			}
			j++
		}
	}

	if t == nil {
		return nil
	}

	return t.(IBooleanFactorContext)
}

func (s *BooleanTermContext) AllAND() []antlr.TerminalNode {
	return s.GetTokens(CqlParserAND)
}

func (s *BooleanTermContext) AND(i int) antlr.TerminalNode {
	return s.GetToken(CqlParserAND, i)
}

func (s *BooleanTermContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *BooleanTermContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *BooleanTermContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(CqlParserListener); ok {
		listenerT.EnterBooleanTerm(s)
	}
}

func (s *BooleanTermContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(CqlParserListener); ok {
		listenerT.ExitBooleanTerm(s)
	}
}

func (p *CqlParser) BooleanTerm() (localctx IBooleanTermContext) {
	localctx = NewBooleanTermContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 4, CqlParserRULE_booleanTerm)
	var _la int

	p.EnterOuterAlt(localctx, 1)
	{
		p.SetState(133)
		p.BooleanFactor()
	}
	p.SetState(138)
	p.GetErrorHandler().Sync(p)
	if p.HasError() {
		goto errorExit
	}
	_la = p.GetTokenStream().LA(1)

	for _la == CqlParserAND {
		{
			p.SetState(134)
			p.Match(CqlParserAND)
			if p.HasError() {
				// Recognition error - abort rule
				goto errorExit
			}
		}
		{
			p.SetState(135)
			p.BooleanFactor()
		}

		p.SetState(140)
		p.GetErrorHandler().Sync(p)
		if p.HasError() {
			goto errorExit
		}
		_la = p.GetTokenStream().LA(1)
	}

errorExit:
	if p.HasError() {
		v := p.GetError()
		localctx.SetException(v)
		p.GetErrorHandler().ReportError(p, v)
		p.GetErrorHandler().Recover(p, v)
		p.SetError(nil)
	}
	p.ExitRule()
	return localctx
	goto errorExit // Trick to prevent compiler error if the label is not used
}

// IBooleanFactorContext is an interface to support dynamic dispatch.
type IBooleanFactorContext interface {
	antlr.ParserRuleContext
